--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "jest",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,12 @@
     "firebase-admin": "^9.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "firebase-functions-test": "^0.2.3",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "sinon": "^9.2.1",
+    "supertest": "^6.0.1"
   }
 }
